add_library(components
  802.15.4_RF/atmel-rf-driver/source/NanostackRfPhyAtmel.cpp
  802.15.4_RF/atmel-rf-driver/source/at24mac.cpp
  802.15.4_RF/mcr20a-rf-driver/source/MCR20Drv.c
  802.15.4_RF/mcr20a-rf-driver/source/NanostackRfPhyMcr20a.cpp
  802.15.4_RF/stm-s2lp-rf-driver/source/NanostackRfPhys2lp.cpp
  802.15.4_RF/stm-s2lp-rf-driver/source/at24mac_s2lp.cpp
  802.15.4_RF/stm-s2lp-rf-driver/source/rf_configuration.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_EMUL/psa_attest_inject_key.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_EMUL/psa_initial_attestation_api.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/attest_boot_status_loader.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/attest_crypto.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/attest_crypto_keys.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/attest_iat_claims_loader.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/attestation_bootloader_data.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/psa_attestation_stubs.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/psa_inject_attestation_key_impl.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/attest_token.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/attest_token.h
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/attestation_core.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/t_cose/src/t_cose_sign1_sign.c
  TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/t_cose/src/t_cose_util.c
  TARGET_PSA/services/attestation/qcbor/src/UsefulBuf.c
  TARGET_PSA/services/attestation/qcbor/src/ieee754.c
  TARGET_PSA/services/attestation/qcbor/src/qcbor_decode.c
  TARGET_PSA/services/attestation/qcbor/src/qcbor_encode.c
  TARGET_PSA/services/platform/COMPONENT_PSA_SRV_EMUL/platform_emul.c
  TARGET_PSA/services/platform/COMPONENT_PSA_SRV_IMPL/platform_srv_impl.c
  TARGET_PSA/services/storage/common/psa_storage_common_impl.cpp
  TARGET_PSA/services/storage/its/COMPONENT_PSA_SRV_EMUL/psa_prot_internal_storage.cpp
  TARGET_PSA/services/storage/its/COMPONENT_PSA_SRV_IMPL/pits_impl.cpp
  TARGET_PSA/services/storage/ps/COMPONENT_NSPE/protected_storage.cpp
  storage/blockdevice/COMPONENT_FLASHIAP/COMMON/fslittle_test.c
  storage/blockdevice/COMPONENT_FLASHIAP/FlashIAPBlockDevice.cpp
  storage/blockdevice/COMPONENT_SD/SDBlockDevice.cpp
  wifi/esp8266-driver/ESP8266/ESP8266.cpp
  wifi/esp8266-driver/ESP8266Interface.cpp
)

target_link_libraries(components cmsis)
target_link_libraries(components drivers)
target_link_libraries(components mbedtls)
target_link_libraries(components frameworks)
target_link_libraries(components nanostack)

target_include_directories(components
    PUBLIC
        .
          wifi/esp8266-driver/ESP8266
          wifi/esp8266-driver
          wifi
          storage/blockdevice/COMPONENT_SD
          storage/blockdevice/COMPONENT_FLASHIAP/COMMON
          storage/blockdevice/COMPONENT_FLASHIAP
          TARGET_PSA/services/storage/its/COMPONENT_PSA_SRV_IMPL
          TARGET_PSA/services/storage/its
          TARGET_PSA/services/storage/common
          TARGET_PSA/services/storage
          TARGET_PSA/services/platform/COMPONENT_PSA_SRV_IMPL
          TARGET_PSA/services/inc
          TARGET_PSA/services/attestation/qcbor/src
          TARGET_PSA/services/attestation/qcbor/inc
          TARGET_PSA/services/attestation/qcbor
          TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/t_cose/src
          TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/t_cose/inc
          TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl/t_cose
          TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL/tfm_impl
          TARGET_PSA/services/attestation/COMPONENT_PSA_SRV_IMPL
          TARGET_PSA/services/attestation
          TARGET_PSA/services
          TARGET_PSA/inc/psa_manifest
          TARGET_PSA/inc/psa
          TARGET_PSA/inc
          TARGET_PSA
          802.15.4_RF/stm-s2lp-rf-driver/stm-s2lp-rf-driver
          802.15.4_RF/stm-s2lp-rf-driver/source
          802.15.4_RF/stm-s2lp-rf-driver
          802.15.4_RF/mcr20a-rf-driver/source
          802.15.4_RF/mcr20a-rf-driver/mcr20a-rf-driver
          802.15.4_RF/mcr20a-rf-driver
          802.15.4_RF/atmel-rf-driver/source
          802.15.4_RF/atmel-rf-driver/atmel-rf-driver
          802.15.4_RF/atmel-rf-driver
          802.15.4_RF
)
