add_library(cellular
  framework/AT/ATHandler.cpp
  framework/AT/AT_CellularBase.cpp
  framework/AT/AT_CellularContext.cpp
  framework/AT/AT_CellularDevice.cpp
  framework/AT/AT_CellularInformation.cpp
  framework/AT/AT_CellularNetwork.cpp
  framework/AT/AT_CellularSMS.cpp
  framework/AT/AT_CellularStack.cpp
  framework/AT/AT_ControlPlane_netif.cpp
  framework/common/APN_db.cpp
  framework/common/CellularLog.cpp
  framework/common/CellularUtil.cpp
  framework/device/CellularContext.cpp
  framework/device/CellularDevice.cpp
  framework/device/CellularStateMachine.cpp
  framework/targets/GEMALTO/CINTERION/GEMALTO_CINTERION.cpp
  framework/targets/GEMALTO/CINTERION/GEMALTO_CINTERION_CellularContext.cpp
  framework/targets/GEMALTO/CINTERION/GEMALTO_CINTERION_CellularInformation.cpp
  framework/targets/GEMALTO/CINTERION/GEMALTO_CINTERION_CellularStack.cpp
  framework/targets/GENERIC/GENERIC_AT3GPP/GENERIC_AT3GPP.cpp
  framework/targets/MultiTech/DragonflyNano/PPP/SARA4_PPP.cpp
  framework/targets/MultiTech/DragonflyNano/PPP/SARA4_PPP_CellularNetwork.cpp
  framework/targets/QUECTEL/BC95/QUECTEL_BC95.cpp
  framework/targets/QUECTEL/BC95/QUECTEL_BC95_CellularContext.cpp
  framework/targets/QUECTEL/BC95/QUECTEL_BC95_CellularInformation.cpp
  framework/targets/QUECTEL/BC95/QUECTEL_BC95_CellularNetwork.cpp
  framework/targets/QUECTEL/BC95/QUECTEL_BC95_CellularStack.cpp
  framework/targets/QUECTEL/BG96/QUECTEL_BG96.cpp
  framework/targets/QUECTEL/BG96/QUECTEL_BG96_CellularContext.cpp
  framework/targets/QUECTEL/BG96/QUECTEL_BG96_CellularInformation.cpp
  framework/targets/QUECTEL/BG96/QUECTEL_BG96_CellularNetwork.cpp
  framework/targets/QUECTEL/BG96/QUECTEL_BG96_CellularStack.cpp
  framework/targets/QUECTEL/BG96/QUECTEL_BG96_ControlPlane_netif.cpp
  framework/targets/QUECTEL/EC2X/QUECTEL_EC2X.cpp
  framework/targets/QUECTEL/M26/QUECTEL_M26.cpp
  framework/targets/QUECTEL/M26/QUECTEL_M26_CellularContext.cpp
  framework/targets/QUECTEL/M26/QUECTEL_M26_CellularInformation.cpp
  framework/targets/QUECTEL/M26/QUECTEL_M26_CellularStack.cpp
  framework/targets/QUECTEL/UG96/QUECTEL_UG96.cpp
  framework/targets/QUECTEL/UG96/QUECTEL_UG96_CellularContext.cpp
  framework/targets/RiotMicro/AT/RM1000_AT.cpp
  framework/targets/RiotMicro/AT/RM1000_AT_CellularContext.cpp
  framework/targets/RiotMicro/AT/RM1000_AT_CellularNetwork.cpp
  framework/targets/RiotMicro/AT/RM1000_AT_CellularStack.cpp
  framework/targets/TELIT/HE910/TELIT_HE910.cpp
  framework/targets/TELIT/ME910/TELIT_ME910.cpp
  framework/targets/TELIT/ME910/TELIT_ME910_CellularContext.cpp
  framework/targets/UBLOX/AT/UBLOX_AT.cpp
  framework/targets/UBLOX/AT/UBLOX_AT_CellularContext.cpp
  framework/targets/UBLOX/AT/UBLOX_AT_CellularNetwork.cpp
  framework/targets/UBLOX/AT/UBLOX_AT_CellularStack.cpp
  framework/targets/UBLOX/N2XX/UBLOX_N2XX.cpp
  framework/targets/UBLOX/N2XX/UBLOX_N2XX_CellularContext.cpp
  framework/targets/UBLOX/N2XX/UBLOX_N2XX_CellularSMS.cpp
  framework/targets/UBLOX/N2XX/UBLOX_N2XX_CellularStack.cpp
  framework/targets/UBLOX/PPP/UBLOX_PPP.cpp
)

target_link_libraries(cellular rtos)

target_include_directories(cellular 
    PUBLIC
        .
        framework/targets/UBLOX/PPP
        framework/targets/UBLOX/N2XX
        framework/targets/UBLOX/AT
        framework/targets/UBLOX
        framework/targets/TELIT/ME910
        framework/targets/TELIT/HE910
        framework/targets/TELIT
        framework/targets/RiotMicro/AT
        framework/targets/RiotMicro
        framework/targets/QUECTEL/UG96
        framework/targets/QUECTEL/M26
        framework/targets/QUECTEL/EC2X
        framework/targets/QUECTEL/BG96
        framework/targets/QUECTEL/BC95
        framework/targets/QUECTEL
        framework/targets/MultiTech/DragonflyNano/PPP
        framework/targets/MultiTech/DragonflyNano
        framework/targets/MultiTech
        framework/targets/GENERIC/GENERIC_AT3GPP
        framework/targets/GENERIC
        framework/targets/GEMALTO/CINTERION
        framework/targets/GEMALTO
        framework/targets
        framework/device
        framework/common
        framework/AT
        framework/API
        framework
        mbed-os/features/cellular
)
