add_library(mbedtls
  mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/psa_crypto.c
  mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/psa_crypto_se.c
  mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/psa_crypto_slot_management.c
  mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/psa_crypto_storage.c
  mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/psa_its_file.c
  mbed-crypto/src/aes.c
  mbed-crypto/src/aesni.c
  mbed-crypto/src/arc4.c
  mbed-crypto/src/aria.c
  mbed-crypto/src/asn1parse.c
  mbed-crypto/src/asn1write.c
  mbed-crypto/src/base64.c
  mbed-crypto/src/bignum.c
  mbed-crypto/src/blowfish.c
  mbed-crypto/src/camellia.c
  mbed-crypto/src/ccm.c
  mbed-crypto/src/chacha20.c
  mbed-crypto/src/chachapoly.c
  mbed-crypto/src/cipher.c
  mbed-crypto/src/cipher_wrap.c
  mbed-crypto/src/cmac.c
  mbed-crypto/src/ctr_drbg.c
  mbed-crypto/src/des.c
  mbed-crypto/src/dhm.c
  mbed-crypto/src/ecdh.c
  mbed-crypto/src/ecdsa.c
  mbed-crypto/src/ecjpake.c
  mbed-crypto/src/ecp.c
  mbed-crypto/src/ecp_curves.c
  mbed-crypto/src/entropy.c
  mbed-crypto/src/entropy_poll.c
  mbed-crypto/src/gcm.c
  mbed-crypto/src/havege.c
  mbed-crypto/src/hkdf.c
  mbed-crypto/src/hmac_drbg.c
  mbed-crypto/src/md.c
  mbed-crypto/src/md2.c
  mbed-crypto/src/md4.c
  mbed-crypto/src/md5.c
  mbed-crypto/src/memory_buffer_alloc.c
  mbed-crypto/src/nist_kw.c
  mbed-crypto/src/oid.c
  mbed-crypto/src/padlock.c
  mbed-crypto/src/pem.c
  mbed-crypto/src/pk.c
  mbed-crypto/src/pk_wrap.c
  mbed-crypto/src/pkcs12.c
  mbed-crypto/src/pkcs5.c
  mbed-crypto/src/pkparse.c
  mbed-crypto/src/pkwrite.c
  mbed-crypto/src/platform.c
  mbed-crypto/src/platform_util.c
  mbed-crypto/src/poly1305.c
  mbed-crypto/src/ripemd160.c
  mbed-crypto/src/rsa.c
  mbed-crypto/src/rsa_internal.c
  mbed-crypto/src/sha1.c
  mbed-crypto/src/sha256.c
  mbed-crypto/src/sha512.c
  mbed-crypto/src/threading.c
  mbed-crypto/src/timing.c
  mbed-crypto/src/xtea.c
  platform/TARGET_PSA/COMPONENT_NSPE/src/psa_hrng.c
  platform/TARGET_PSA/COMPONENT_PSA_SRV_IMPL/src/default_random_seed.cpp
  platform/src/mbed_trng.cpp
  platform/src/platform_alt.cpp
  src/certs.c
  src/debug.c
  src/error.c
  src/net_sockets.c
  src/pkcs11.c
  src/ssl_cache.c
  src/ssl_ciphersuites.c
  src/ssl_cli.c
  src/ssl_cookie.c
  src/ssl_srv.c
  src/ssl_ticket.c
  src/ssl_tls.c
  src/version.c
  src/version_features.c
  src/x509.c
  src/x509_create.c
  src/x509_crl.c
  src/x509_crt.c
  src/x509_csr.c
  src/x509write_crt.c
  src/x509write_csr.c
  targets/hash_wrappers.c
)

target_link_libraries(mbedtls platform)
target_link_libraries(mbedtls components)

target_include_directories (mbedtls
    PUBLIC 
        .
        inc
        inc/mbedtls
        platform
        platform/inc
        platform/TARGET_PSA/COMPONENT_PSA_SRV_IMPL
        platform/TARGET_PSA/COMPONENT_PSA_SRV_IMPL/inc
        mbed-crypto
        mbed-crypto/inc
        mbed-crypto/inc/mbedtls
        mbed-crypto/inc/psa
        mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL
        mbed-crypto/platform/COMPONENT_PSA_SRV_IMPL/COMPONENT_NSPE
        mbed-crypto/src
)
